RESOLVED FIXED88106
Crash in WebCore::FontFallbackList::determinePitch
https://bugs.webkit.org/show_bug.cgi?id=88106
Summary Crash in WebCore::FontFallbackList::determinePitch
Eli Fidler
Reported 2012-06-01 10:12:50 PDT
If the site doesn't ask for a reasonable font and the system doesn't provide a good fallback, FontFallBackList::primaryFontData can be 0.
Attachments
Patch (1.58 KB, patch)
2012-06-01 10:15 PDT, Eli Fidler
no flags
Patch (1.79 KB, patch)
2012-06-01 14:16 PDT, Eli Fidler
no flags
Eli Fidler
Comment 1 2012-06-01 10:15:57 PDT
mitz
Comment 2 2012-06-01 12:03:04 PDT
Comment on attachment 145335 [details] Patch There are many places in the code that require primaryFontData to be non-0. This bug should be fixed in the FontCache implementation so that it always provides some font as a last resort.
Eli Fidler
Comment 3 2012-06-01 14:16:36 PDT
WebKit Review Bot
Comment 4 2012-06-02 14:52:50 PDT
Comment on attachment 145375 [details] Patch Clearing flags on attachment: 145375 Committed r119340: <http://trac.webkit.org/changeset/119340>
WebKit Review Bot
Comment 5 2012-06-02 14:53:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.