Don't crash if we ask for fonts that don't exist. https://bugs.webkit.org/show_bug.cgi?id=88106

Reviewed by Dan Bernstein.

RIM PR 161219

If the site doesn't ask for a reasonable font and the system doesn't
provide a good fallback, FontFallBackList::primaryFontData can be 0,
which can cause a crash.

* platform/graphics/skia/FontCacheSkia.cpp:
(WebCore::FontCache::getLastResortFallbackFont):


Canonical link: https://commits.webkit.org/106008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119340 268f45cc-cd09-0410-ab3c-d52691b4dbfc